shotwell (0.22.0-1) UNRELEASED; urgency=medium

  * New upstream release.
  * Refresh patches:
    - debian/patches/hardening.patch
    - debían/patches/500-buildflags.patch
  * Remove upstream applied patch:
    - debian/patches/505-fix-viewer-desktop-file.patch

 -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Fri, 03 Apr 2015 13:16:32 +0200

shotwell (0.20.2-2) unstable; urgency=low

  * Add user scripts to replace shotwell-video-thumbnailer
    if the thumbnailer is broken (Closes: #768637):
    - New files:
      + debian/shotwell.README.Debian
      + debian/replace_thumbnailer.sh
      + debian/shotwell.postrm
      + debian/shotwell.examples
    - Thanks to Teo Romera <teoromera@gmail.com>.
  * debian/patches:
    - Add 505-fix-viewer-desktop-file.patch to correct build of
      shotwell-viewer.desktop (Closes: #776745).
      + Thanks to Raphaël Halimi <raphael.halimi@gmail.com>.
    - Rewrite 500-buildflags.patch to prevent FTBFS on
      architectures i386 and powerpc.
  * debian/control:
    - Add Build-Depends libicu-dev for missing unicode/ucnv.h.

 -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Mon, 02 Feb 2015 05:16:56 +0100

shotwell (0.20.2-1) unstable; urgency=medium

  * New upstream release (Closes: #769025).
  * debian/control:
    - Remove useless ${shlibs:Depends} from shotwell-dbg.
  * debian/rules:
    - Remove useless hardening parts.
  * New debian/patches/500-buildflags.patch:
    - Poke requested Debian buildflags for hardening into Makefile.
  * Add year 2015 for debian/* to debian/copyright.
  * Remove debian/source/options because compression xz is standard now.

 -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Wed, 07 Jan 2015 14:23:48 +0100

shotwell (0.20.1-1) unstable; urgency=medium

  * New upstream release.
  * Add sharedobject-in-library-directory-missing-soname to
    lintian-overrides.
  * debian/patch/hardening.patch:
    - Add removal of --fatal-warnings at plugins/Makefile.plugins.mk